modules/network/security_group.tf
resource "aws_security_group" "shared_sg" {
  name        = "${var.environment}-shared-sg"
  description = "Shared security group for all instances in ${var.environment} environment"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "Allow SSH from my IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.ssh_allowed_cidr]
  }

  # EC2 Instance Connect (browser SSH)
  ingress {
    description     = "Allow EC2 Instance Connect"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    prefix_list_ids = var.prefix_list_ids
  }

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.environment}-shared-sg"
    Environment = var.environment
  }
}
